--- a/p3/a3/templates/leaves.html
+++ b/p3/a3/templates/leaves.html
@@ -16,13 +16,13 @@
             {% csrf_token %} 
             <!-- {{ forms }} -->
             <label for="name">Full Name</label>
-            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="text" name="name" placeholder="" id="">
+            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="text" required name="name" placeholder="" id="">
             <label for="startdate">Leave Start Date</label>
-            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="date" name="startdate" id="">
+            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="date" required name="startdate" id="">
             <label for="enddate">Leave End Date</label>
-            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="date" name="lastdate" id="">
+            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="date" required name="lastdate" id="">
             <label for="select reason">Select Reason</label>
-            <select name="reason" class="border w-full h-10 px-3 mb-5 rounded-md" id="leave" >
+            <select required name="reason" class="border w-full h-10 px-3 mb-5 rounded-md" id="leave" >
                 <option value="vacation">vacation</option>
                 <option value="sick-family">sick-family</option>
                 <option value="sick-self">sick-self</option>
@@ -30,7 +30,7 @@
                 <option value="others"> Others </option>
             </select>
             <label for="enter reason">Enter Reason</label>
-            <textarea name="enterreason" id="textbox" class="border w-full  px-3 mb-5 rounded-md"></textarea>
+            <textarea required name="enterreason" id="textbox" class="border w-full  px-3 mb-5 rounded-md"></textarea>
             <input type="submit" name="submit" id="submit" value="Submit" class="ml-24 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-16 py-3 rounded">
         </form>
     
