--- a/p3/accounts/templates/user_login.html
+++ b/p3/accounts/templates/user_login.html
@@ -47,7 +47,7 @@ input[type="submit"]{
         <!-- <input type="text" name="name" id="name" placeholder="name">
         <input type="password" name="password" id="" placeholder="password"> -->
         <input type="submit" name="" value="login" id="">
-        <a href ="user_signup">don't have an account? Sign Up<a>
+        <a href ="../signup/">don't have an account? Sign Up<a>
     </form>
   </div>
   
