--- a/p3/a3/templates/emp_nav.html
+++ b/p3/a3/templates/emp_nav.html
@@ -12,6 +12,7 @@
         <a href="../salary_updates" class="mr-10 hover:text-yellow-400 "> Salary Updates </a>        
         <a href="../leaves" class="mr-10 hover:text-yellow-400 ">leave report </a>        
         <a href="../profile" class="mr-10 hover:text-yellow-400 "> Profile </a>        
+        <a href="../feedback" class="mr-10 hover:text-yellow-400 "> feedback </a>        
         <form class="logout-link"   action="{% url 'accounts:logout' %}" method = "post">
             {% csrf_token %}
             <button class="mr-10 hover:bg-slate-800 rounded-sm hover:text-yellow-400" type="submit">logout</button> 
