--- a/p3/a3/templates/feedback.html
+++ b/p3/a3/templates/feedback.html
@@ -1,14 +1,13 @@
-{% extends "hr_nav.html" %}
+{% extends "emp_nav.html" %}
 {% load static tailwind_tags %}
     <title>{% block title %}Document{% endblock %}</title>
 
 {% block body %} 
    {% tailwind_css %}
-
-  <div class="relative overflow-x-auto ml-5">
-    <h1 class="border text-4xl text-yellow-800 px-6 pt-10 pb-8 bg-white w-1/2 max-w-md mx-auto rounded-t-md sm:px-10">Employees</h1>
-        <input type="text" id="Input" value="" placeholder="Enter your search" onkeyup ="searchfun()">
-        <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400"  id="table">
+  <div class="relative  ml-5">
+    <h1 class="border text-4xl text-yellow-800 px-6 pt-10 pb-8 bg-white w-1/2 max-w-md mx-auto rounded-t-md sm:px-10">Leave report</h1>
+        <input type="text" id="Input" placeholder="Enter your search" onkeyup ="searchfun()">
+        <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
             <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                 <tr>
                     <th class="px-6 py-3">Employee id</th>
@@ -20,7 +19,7 @@
                 </tr>
             </thead>
         {% for i in employee %}
-        <tbody class="">
+        <tbody class="" id="table">
         <tr>
             <td class="px-6 py-3" >{{ i.emp_id }}</td>
             <td class="px-6 py-3" >{{ i.username }}</td>
@@ -28,7 +27,7 @@
             <td class="px-6 py-3" >{{ i.dob }}</td>
             <td class="px-6 py-3" >{{ i.mobile }}</td>
             <td class="px-6 py-3" >{{ i.country }}</td>
-            <td><a href="../{{i.id}}/delete_v"><button class="ml-20 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-6 py-2 rounded">Delete</button></a></td>
+            <td><a href="../feedbackform"><button class="ml-20 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-6 py-2 rounded">give feedback</button></a></td>
 
         </tr>
         </tbody>
@@ -36,25 +35,23 @@
     </table>    
 </div>
 
+{% endblock %}
+
+{% block script %}
 <script>
     const searchfun = () => {
         let element = document.getElementById("Input").value.toUpperCase();
         let table = document.getElementById("table");
         let tr = table.getElementsByTagName("tr");
         for (let i = 0; i < tr.length; i++) {
-            let tds = tr[i].getElementsByTagName("td");
-            console.log(tds)
-            for (let j = 0;j<tds.length;j++){
-                let td = tds[j]
-                console.log(td)
-                if (td) {
-                    let text = td.textContent || td.innerText;
-                    if (text.toUpperCase().indexOf(element) > -1) {
-                        tr[i].style.display = "";
-                    } else {
-                        tr[i].style.display = "none";
-                    }
-                }
+            let td = tr[i].getElementsByTagName("td")[0];
+            if (td) {
+                let text = td.textContent || td.innerHTML;
+                if (text.toUpperCase().indexOf(element) > -1) {
+                    tr[i].style.display = "";
+                } else {
+                    tr[i].style.display = "none";
+                }   
             }
         }
     }
