--- a/p3/a3/templates/emp_home.html
+++ b/p3/a3/templates/emp_home.html
@@ -1,6 +1,11 @@
 {% extends "emp_nav.html" %}
+{% load static tailwind_tags %}
     <title>{% block title %}Document{% endblock %}</title>
 </head>
 {%block body%}
-    <p>Welcome to gvpcoe</p>
+    <script src="https://cdn.tailwindcss.com"></script>
+{% tailwind_css %}
+    <img src ="{% static 'gvpce1.jpg' %}" class="w-full">
+
+{% include "footer.html"%}
 {% endblock %}
