--- a/p3/a3/templates/hr_home.html
+++ b/p3/a3/templates/hr_home.html
@@ -1,5 +1,10 @@
 {% extends "hr_nav.html" %}
+{% load static tailwind_tags %}
     <title>{% block title %}Document{% endblock %}</title>
 {% block body%}
-    <p>Welcome to gvpcoe</p>
+     <script src="https://cdn.tailwindcss.com"></script>
+{% tailwind_css %}
+    <img src ="{% static 'gvpce2.jpg' %}" class="w-full">
+
+{% include "footer.html"%}
 {% endblock%}
