--- a/p3/a3/templates/nav_bar.html
+++ b/p3/a3/templates/nav_bar.html
@@ -1,8 +1,8 @@
-    {% load static tailwind_tags %}
+ {% load static tailwind_tags %}
     <title>{% block title %}nav_bar{% endblock %}</title>
     {% tailwind_css %}
 
-    <div class=" bg-black p-3   text-white rounded-xl ">
+        {% comment %}<div class=" bg-black p-3   text-white rounded-xl ">
         <div class="text-2xl">
         Gayatri Vidya Parishad
         <div class="text-lg flex mb-2 mt-0 " style ="float:right;">
@@ -16,5 +16,30 @@
         </div> 
         </div>
         </div>
-{% block body %} {% endblock %} 
-    
+  {% endcomment %}
+     
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+  <nav class="bg-gray-800">
+    <div class="container mx-auto px-4">
+      <div class="flex items-center justify-between py-4">
+        <div>
+          <a href="#" class="text-white text-xl font-bold">Gayatri Vidya Parishad</a>
+        </div>
+        <div class="hidden md:block">
+          <ul class="flex space-x-4">
+            <li>
+              <a href="/" class="text-white hover:text-gray-300">Home</a>
+            </li>
+            <li>
+              <a href="user_login/ " class="text-white hover:text-gray-300">Faculty</a>
+            </li>
+            <li>
+              <a href=" hr_login/ " class="text-white hover:text-gray-300">Manager</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
+  {% block body %} {% endblock %}
+	
