--- a/p3/a3/templates/add_salary.html
+++ b/p3/a3/templates/add_salary.html
@@ -1,9 +1,9 @@
-{% extends "emp_nav.html" %}
+{% extends "hr_nav.html" %}
 {% load static tailwind_tags  %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 {% block body %}
-{% tailwind_css %} required
+{% tailwind_css %}
 <div class=" bg-slate-200">
     <div class=" min-h-screen bg-slate-200 py-6  sm:py-12">
     <center><span class="border text-4xl text-yellow-800 px-6 pt-10 pb-8 font-bold w-1/2 max-w-md mx-auto rounded-t-md sm:px-10">salary credits</span></center>
