--- a/p3/a3/templates/emp_profile.html
+++ b/p3/a3/templates/emp_profile.html
@@ -41,6 +41,7 @@
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.postal_code }}</div>  
         </div>
     </div>
+    <a href = "../profile" class = "ml-32 mt-3 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-16 py-3 rounded">Updates<a>
     </div>
     </div>
 
