--- a/p3/a3/templates/hr_nav.html
+++ b/p3/a3/templates/hr_nav.html
@@ -37,22 +37,22 @@
               <a href="../hr_home" class="text-white hover:text-gray-300">Home</a>
             </li>
             <li>
-              <a href="user_login/ " class="text-white hover:text-gray-300">Recent Employees </a>
+              <a href="../update_employees " class="text-white hover:text-gray-300">Recent Employees </a>
             </li>
             <li>
-              <a href="user_login/ " class="text-white hover:text-gray-300">Employees</a>
+              <a href="../employees" class="text-white hover:text-gray-300">Employees</a>
             </li>
             <li>
-              <a href="user_login/ " class="text-white hover:text-gray-300">Assign Subject </a>
+              <a href="../assign_sub " class="text-white hover:text-gray-300">Assign Subject </a>
             </li>
             <li>
-              <a href="user_login/ " class="text-white hover:text-gray-300">Syllabus Updates</a>
+              <a href="../syllabus " class="text-white hover:text-gray-300">Syllabus Updates</a>
             </li>
             <li>
-              <a href="user_login/ " class="text-white hover:text-gray-300">add Salary</a>
+              <a href="../add_salary " class="text-white hover:text-gray-300">add Salary</a>
             </li>
             <li>
-              <a href=" hr_login/ " class="text-white hover:text-gray-300">leave report</a>
+              <a href="../leaves_report" class="text-white hover:text-gray-300">leave report</a>
             </li>
             <form class="logout-link"   action="{% url 'accounts:logout' %}" method = "post">
             {% csrf_token %}
