--- a/p3/a3/templates/leaves_report.html
+++ b/p3/a3/templates/leaves_report.html
@@ -27,8 +27,8 @@
             <td class="px-6 py-3" >{{ i.startdate }}</td>
             <td class="px-6 py-3" >{{ i.lastdate }}</td>
             <td class="px-6 py-3" >{{ i.enterreason }}</td>
-            <td><button class="ml-20 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-8 py-3 rounded">Accept</button></td>
-            <td><button class="ml-20 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-8 py-3 rounded">Reject</button></td>
+            <td><a href="../{{i.id}}/accept"><button class="ml-20 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-6 py-2 rounded">Accept</button></a></td>
+            <td><a href="../{{i.id}}/delete_z"><button class="ml-20 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-6 py-2 rounded">Reject</button></a></td>
         </tr>
         </tbody>
         {% endfor %}
