--- a/p3/a3/templates/feedback.html
+++ b/p3/a3/templates/feedback.html
@@ -5,7 +5,7 @@
 {% block body %} 
    {% tailwind_css %}
   <div class="relative  ml-5">
-    <h1 class="border text-4xl text-yellow-800 px-6 pt-10 pb-8 bg-white w-1/2 max-w-md mx-auto rounded-t-md sm:px-10">Leave report</h1>
+    <h1 class="border text-4xl text-yellow-800 px-6 pt-10 pb-8 bg-white w-1/2 max-w-md mx-auto rounded-t-md sm:px-10">FeedBack</h1>
         <input type="text" id="Input" placeholder="Enter your search" onkeyup ="searchfun()">
         <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
             <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
