--- a/p3/a3/templates/feedbackform.html
+++ b/p3/a3/templates/feedbackform.html
@@ -7,7 +7,7 @@
     {% tailwind_css %}
     <div class=" bg-slate-200">
         <div class=" bg-slate-200 py-6  sm:py-12">
-        <center> <span class="border text-4xl text-yellow-800 font-bold px-6 pt-10 pb-8  w-1/2 max-w-md mx-auto rounded-t-md sm:px-10">LEAVE REPORT</span></center>
+        <center> <span class="border text-4xl text-yellow-800 font-bold px-6 pt-10 pb-8  w-1/2 max-w-md mx-auto rounded-t-md sm:px-10">FeedBack Form</span></center>
         <div class="border relative px-4 pt-7 pb-8 bg-white shadow-xl w-1/2 max-w-md mx-auto sm:px-10 rounded-b-md">
         <form action=""  method="post">
             {% csrf_token %} 
