--- a/p3/a3/templates/nav_bar.html
+++ b/p3/a3/templates/nav_bar.html
@@ -18,12 +18,12 @@
         </div>
   {% endcomment %}
      
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+  <link href="" rel="stylesheet">
   <nav class="bg-gray-800">
     <div class="container mx-auto px-4">
       <div class="flex items-center justify-between py-4">
         <div>
-          <a href="#" class="text-white text-xl font-bold">Gayatri Vidya Parishad</a>
+          <a href="#" class="text-white text-xl font-bold">Gayatri Vidya Parishad Collage of Engineering(A)</a>
         </div>
         <div class="hidden md:block">
           <ul class="flex space-x-4">
