--- a/p3/a3/templates/syl_updates.html
+++ b/p3/a3/templates/syl_updates.html
@@ -33,5 +33,6 @@
             <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="text" required name="current" placeholder="Current Unit" id="">
             <input type="submit" name="submit" id="submit" value="Submit" class="ml-24 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-16 py-3 rounded">
         </form>
-    
+    </div>
+</div>
 {%endblock %}
