--- a/p3/a3/templates/emp_profile.html
+++ b/p3/a3/templates/emp_profile.html
@@ -9,30 +9,32 @@
 {% tailwind_css %}
 <script src="https://cdn.tailwindcss.com"></script>
 
-<div class=" bg-slate-200">
 
-    <div class=" bg-white max-w-xl mx-auto sm:px-10 ">
+
+    <div class=" bg-white max-w-xl mx-auto sm:px-10 p-4 mt-3 border-2 border-black">
     <h1 class="text-5xl text-yellow-800 border-b-4 mb-4 border-black">Profile</h1> 
     <div class="container mx-auto flex">
-        <div class="grid grid-cols-1 ">
+        <div class="grid grid-cols-1 mb-3 ">
             <div class="bg-gray-200 py-4 px-12 m-2">Name</div>
             <div class="bg-gray-200 py-4 px-12 m-2">Email</div>
             <div class="bg-gray-200 py-4 px-12 m-2">First Name</div>
             <div class="bg-gray-200 py-4 px-12 m-2">Last name</div>
             <div class="bg-gray-200 py-4 px-12 m-2">Empoloyee Id</div>
+            <div class="bg-gray-200 py-4 px-12 m-2">Position</div>
             <div class="bg-gray-200 py-4 px-12 m-2">Date of Birth</div>
-            <div class="bg-gray-200 py-4 px-12 m-2">Mobile Number</div>
+            <div class="bg-gray-200 py-4 px-14 m-2">PhoneNumber</div>
             <div class="bg-gray-200 py-4 px-12 m-2">Address</div>
             <div class="bg-gray-200 py-4 px-12 m-2">City</div>
             <div class="bg-gray-200 py-4 px-12 m-2">Country</div>
             <div class="bg-gray-200 py-4 px-12 m-2">Postal Code</div>
         </div>
-        <div class="grid grid-cols-1 ">
+        <div class="grid grid-cols-1 mb-3">
             <div class="bg-gray-200 py-4 px-12  m-2">{{ profile.username }}</div>
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.email }}</div>
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.firstname }}</div>
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.lastname }}</div>  
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.emp_id }}</div>  
+            <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.position }}</div>  
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.dob }}</div>  
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.mobile }}</div>  
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.address }}</div>  
@@ -41,8 +43,8 @@
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.postal_code }}</div>  
         </div>
     </div>
-    <a href = "../profile" class = "ml-32 mt-3 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-16 py-3 rounded">Updates<a>
+    <a href = "../profile" class = "ml-32  bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-16 py-3 rounded">Updates<a>
     </div>
-    </div>
+  
 
 {% endblock %}
