--- a/p3/a3/templates/profile.html
+++ b/p3/a3/templates/profile.html
@@ -6,12 +6,10 @@
 <div class="min-h-screen p-6 bg-gray-100  items-center justify-center">
     <div class="container max-w-screen-lg mx-auto">
       <div>
-        <h2 class="font-semibold text-center text-3xl text-yellow-700">Profile</h2>
+        <h2 class="font-semibold text-center text-3xl text-yellow-700"> Update Profile</h2>
         <div class="bg-white rounded shadow-lg p-4 px-4 md:p-8 mb-6">
             <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 lg:grid-cols-3">
-              <div class="text-gray-600">
-                <p class="font-medium text-lg">Personal Details</p>
-              </div>
+              <div class="text-gray-600"></div>
 <form action="{% url 'a3:profile' %}" method="post" class="">
     {% csrf_token %}
     <div class="lg:col-span-2">
@@ -36,6 +34,16 @@
             <label for="full_name">Empoloyee Id</label>
             <input type="text" name="emp_id" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" value = "{{bar}}"><br>
         </div>
+        <div class="md:col-span-5">
+        <label for="full_name">Position</label>
+        <select required name="position" class="border w-full h-10 px-3 rounded-md" id="leave" >
+            <option value="dean">Dean</option>
+            <option value="HOD">HOD</option>
+            <option value="professor">Professor</option>
+            <option value="assistant professor">Assistant professor </option>
+        </select> 
+        </div>
+
         <div class="md:col-span-5">
             <label for="full_name">Date of Birth</label>
             <input type="date" name="dob" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="date of birth"><br>
