--- a/p3/a3/templates/sal_details.html
+++ b/p3/a3/templates/sal_details.html
@@ -1,4 +1,3 @@
-{% extends "hr_nav.html" %}
 {% load static tailwind_tags %}
 
     <title>{% block title %}Document{% endblock %}</title>
@@ -15,13 +14,12 @@
                 <th class="px-6 py-3">Amount</th>
                 <th class="px-6 py-3">date</th>
                 <th class="px-6 py-3">Transaction Time</th>
-               
             </tr>
         </thead>
         {% for i in salary %}
         <tbody class="">
         <tr>
-            <td class="px-6 py-3" >{{ i.name }}</td>
+            <td class="px-6 py-3" >{{ i.username }}</td>
             <td class="px-6 py-3" >{{ i.emp_id }}</td>
             <td class="px-6 py-3" >{{ i.amount }}</td>
             <td class="px-6 py-3" >{{ i.date }}</td>
